--- a/carolina_herrera/choose_store.css
+++ b/carolina_herrera/choose_store.css
@@ -19,8 +19,11 @@
   display: none;
 }
 .bw-iframe-container a.choose-store-link.appointment-link.button-clean + table {
-    display: none;
-  }
+  display: none;
+}
+.bw-iframe-container a.choose-store-link.appointment-link.button-clean {
+  padding: 9px;
+}
 /* Firefox */
 @-moz-document url-prefix() { 
   .bw-iframe-container .appointment-rsvp-container .local-stores .container .select_store_button {
